@@ -1,5 +1,8 @@
-$NetBSD: distinfo,v 1.104 2012/10/12 18:28:58 ryoon Exp $
+$NetBSD: distinfo,v 1.105 2012/11/03 22:51:53 ryoon Exp $
 
+SHA1 (enigmail-1.4.5.tar.gz) = 16d0450a9f5fb4de0e9cc5b9f8091dce4b070aaf
+RMD160 (enigmail-1.4.5.tar.gz) = 860a1ca813fd2ccae69ac0afe07affd39611e56a
+Size (enigmail-1.4.5.tar.gz) = 1269207 bytes
 SHA1 (lightning-1.8.source.tar.bz2) = a3b1c6b67a70b34917b8c0660d5cc57cafd2b8a4
 RMD160 (lightning-1.8.source.tar.bz2) = f4ce359ef676cfa9b95065457be64921f59837fa
 Size (lightning-1.8.source.tar.bz2) = 112070692 bytes
