@@ -1,15 +1,16 @@
-@comment $NetBSD$
+@comment $NetBSD: PLIST,v 1.1 2012/10/02 22:40:07 pettai Exp $
 libexec/knot-zcompile
 libexec/unittests
 libexec/unittests-libknot
 libexec/unittests-libknot-realdata
 libexec/unittests-xfr
 libexec/unittests-zcompile
-man/man8/knot.conf.8
+man/man5/knot.conf.5
 man/man8/knotc.8
 man/man8/knotd.8
 sbin/knotc
 sbin/knotd
 share/examples/knot/example.com.zone
 share/examples/knot/knot.sample.conf
+share/examples/rc.d/knot
 @pkgdir etc/knot
